data/rq4/base_kb_only/intermediate/host__25c1898e1626/workspace/final_projects/host__25c1898e1626/translate_by_qwen3_coder/.c2r_bindgen_fns/hdf_device_object_51edc587.fns.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn HdfDeviceGetServiceName(
        deviceObject: *const HdfDeviceObject,
    ) -> *const ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn HdfDeviceSubscribeService(
        deviceObject: *mut HdfDeviceObject,
        serviceName: *const ::core::ffi::c_char,
        callback: SubscriberCallback,
    ) -> i32;
}
unsafe extern "C" {
    pub fn HdfDeviceSetClass(deviceObject: *mut HdfDeviceObject, deviceClass: DeviceClass) -> bool;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectConstruct(deviceObject: *mut HdfDeviceObject);
}
unsafe extern "C" {
    pub fn HdfDeviceObjectAlloc(
        parent: *mut HdfDeviceObject,
        driverName: *const ::core::ffi::c_char,
    ) -> *mut HdfDeviceObject;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectRelease(dev: *mut HdfDeviceObject);
}
unsafe extern "C" {
    pub fn HdfDeviceObjectRegister(dev: *mut HdfDeviceObject) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectUnRegister(dev: *mut HdfDeviceObject) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectPublishService(
        dev: *mut HdfDeviceObject,
        servName: *const ::core::ffi::c_char,
        policy: u8,
        perm: u32,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectSetServInfo(
        dev: *mut HdfDeviceObject,
        info: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectUpdate(dev: *mut HdfDeviceObject) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectSetInterfaceDesc(
        dev: *mut HdfDeviceObject,
        interfaceDesc: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceObjectCheckInterfaceDesc(dev: *mut HdfDeviceObject, data: *mut HdfSBuf)
        -> bool;
}
unsafe extern "C" {
    pub fn HdfPmRegisterPowerListener(
        deviceObject: *mut HdfDeviceObject,
        listener: *const IPowerEventListener,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfPmUnregisterPowerListener(
        deviceObject: *mut HdfDeviceObject,
        listener: *const IPowerEventListener,
    );
}
unsafe extern "C" {
    pub fn HdfPmAcquireDevice(deviceObject: *mut HdfDeviceObject);
}
unsafe extern "C" {
    pub fn HdfPmReleaseDevice(deviceObject: *mut HdfDeviceObject);
}
unsafe extern "C" {
    pub fn HdfPmAcquireDeviceAsync(deviceObject: *mut HdfDeviceObject);
}
unsafe extern "C" {
    pub fn HdfPmReleaseDeviceAsync(deviceObject: *mut HdfDeviceObject);
}
unsafe extern "C" {
    pub fn HdfPmSetMode(deviceObject: *mut HdfDeviceObject, mode: u32);
}
unsafe extern "C" {
    pub fn HdfDeviceObjectRemoveService(dev: *mut HdfDeviceObject) -> ::core::ffi::c_int;
}
